--- a/Membership_app/Areas/Admin/Views/Item/Delete.cshtml
+++ b/Membership_app/Areas/Admin/Views/Item/Delete.cshtml
@@ -105,7 +105,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type = "submit" value="Delete" class="btn btn-danger btn-sm" /> |
+            <input type = "submit" value="Delete" class="btn btn-danger btn-sm" />
             @Html.Partial("_BackToListButtonPartial")
         </div>
     }
