--- a/Membership_app/Areas/Admin/Views/Subscription/Delete.cshtml
+++ b/Membership_app/Areas/Admin/Views/Subscription/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Membership_app.Entities.ProductType
+﻿@model Membership_app.Entities.Subscription
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ProductType</h4>
+    <h4>Subscription</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -17,6 +17,22 @@
 
         <dd>
             @Html.DisplayFor(model => model.Title)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.RegistrationCode)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.RegistrationCode)
         </dd>
 
     </dl>
