--- a/Membership_app/Views/Shared/_AdminMenuPartial.cshtml
+++ b/Membership_app/Views/Shared/_AdminMenuPartial.cshtml
@@ -1,4 +1,6 @@
-﻿<li class="dropdown" data-admin-menu>
+﻿@if (Request.IsAuthenticated && User.IsInRole("Admin"))
+{
+<li class="dropdown" data-admin-menu>
     <a href="#">Admin <span class="glyphicon glyphicon-chevron-down"></span></a>
     <ul class="dropdown-menu" role="menu">
         <li class="dropdown-header">Minor Entities</li>
@@ -26,3 +28,4 @@
 
     </ul>
 </li>
+}
