--- a/Membership_app/Views/Home/Index.cshtml
+++ b/Membership_app/Views/Home/Index.cshtml
@@ -1,13 +1,16 @@
-﻿@{
+﻿@model IEnumerable<Membership_app.Models.ThumbnailAreaModel>
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="row">
     @if (User.Identity.IsAuthenticated)
     {
-        <div class="col-xs-12">
-            <h2>I'm Logged in</h2>
-        </div>
+        foreach (var area in Model)
+        {
+            @Html.Partial("_ThumbnailAreaPartial", area)
+        }
     }
     else
     {
@@ -18,7 +21,7 @@
 
         // Right column
         <div class="col-lg-3 col-md-4 col-sm-5">
-            
+
         </div>
     }
 </div>
