--- a/Membership_app/Views/Shared/_ThumbnailAreaPartial.cshtml
+++ b/Membership_app/Views/Shared/_ThumbnailAreaPartial.cshtml
@@ -1,17 +1,36 @@
 ﻿@model Membership_app.Models.ThumbnailAreaModel
 
-<div class="headline">
-    <h3>The title area</h3>
-</div>
 <div class="row">
-    <div class="col-sm-3">
-        <div class="thumbnail">
-            <img src="#" alt="" />
-            <div class="caption">
-                <h3>Thumbnail title</h3>
-                <p>Thumbnail description</p>
-            </div>
+    @if (!Model.Title.Equals(string.Empty))
+    {
+        <div class="headline">
+            <h3>@Model.Title</h3>
         </div>
-    </div>
+    }
+    @if (Model.Thumbnails != null)
+    {
+        foreach (var thumb in Model.Thumbnails)
+        {
+            <div class="col-sm-3">
+                <div class="thumbnail">
+                    <div class="thumbnail-container">
+                        <div class="thumbnail-img-container">
+                            <img class="thumbnail-img" src="@thumb.ImageUrl" alt="" />
+                        </div>
+                    </div>
+                    <a class="tag text-tag hover-effect" href="@thumb.Link">
+                        @thumb.TagText
+                    </a>
+                    <div class="tag content-tag">@thumb.ContentTag</div>
+                    <div class="caption">
+                        <h3><a href="@thumb.Link">@thumb.Title</a></h3>
+                        <p>@thumb.Description</p>
+                    </div>
+                </div>
+            </div>
+        }
+
+    }
+
 </div>
 
