--- a/Membership_app/Views/Shared/_Layout.cshtml
+++ b/Membership_app/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/admin")
+    @Scripts.Render("~/bundles/ui")
     @RenderSection("scripts", required: false)
 </body>
 </html>
