--- a/Membership_app/Views/ProductContent/_ProductSectionPartial.cshtml
+++ b/Membership_app/Views/ProductContent/_ProductSectionPartial.cshtml
@@ -13,7 +13,10 @@
         </div>
         <div id="collapse@{@s.Id}" class="panel-collapse collapse in">
             <div class="panel-body">
-                @* place item data here *@
+                @foreach(var item in s.Items)
+                {
+                    @Html.Partial("_ProductItemRowPartial", item)
+                }
             </div>
         </div>
     </div>
