--- a/Membership_app/Views/Home/Index.cshtml
+++ b/Membership_app/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Membership_app.Models.ThumbnailAreaModel>
+@using Membership_app.Models
 
 @{
     ViewBag.Title = "Home Page";
@@ -21,7 +22,7 @@
 
         // Right column
         <div class="col-lg-3 col-md-4 col-sm-5">
-
+            @Html.Partial("_RegisterUserPartial", new RegisterUserModel { Email = "", Name = "", Password = "" })
         </div>
     }
 </div>
