Adding RegisterUser ajax.

--- a/Membership_app/Views/Shared/_RegisterUserPartial.cshtml
+++ b/Membership_app/Views/Shared/_RegisterUserPartial.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="input-group input-group-sm">
                 <span class="input-group-addon glyphicon glyphicon-lock"></span>
-                @Html.TextBoxFor(m => m.Password, new { @class = "form-control password", @placeholder = "Password" })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control password", @placeholder = "Password" })
             </div>
             <br />
             <div class="register-checkbox">
