--- a/Membership_app/Content/login.css
+++ b/Membership_app/Content/login.css
@@ -8,4 +8,14 @@
     border-color: orangered;
 }
 
+[data-login-user-area].open {
+    display: block;
+    padding-top: 0px;
+    padding-bottom: 3px;
+    margin-bottom: 10px;
+}
 
+[data-login-user-area] .glyphicon-remove {
+    cursor: pointer;
+    color: white;
+}
