--- a/Membership_app/Views/Shared/_LoginPartial.cshtml
+++ b/Membership_app/Views/Shared/_LoginPartial.cshtml
@@ -1,17 +1,18 @@
 ﻿@using Microsoft.AspNet.Identity
 @using Membership_app.Extensions
+@using Membership_app.Models
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
-    @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserFirstName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a class="btn btn-danger" data-logout-button href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @Html.ActionLink("Hello " + User.Identity.GetUserFirstName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            </li>
+            <li><a class="btn btn-danger" data-logout-button href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        </ul>
     }
 }
 else
@@ -20,6 +21,7 @@ else
         <li>
             @Html.GlyphLink("Account", "Login", "Log in", "user", "", "loginLink")
             <div class="hidden-xs" data-login-panel-partial></div>
+            @Html.Partial("_LoginPanelPartial", new LoginViewModel { Email="", Password="", RememberMe=false})
         </li>
     </ul>
 }
