--- a/Membership_app/Content/login.css
+++ b/Membership_app/Content/login.css
@@ -19,3 +19,64 @@
     cursor: pointer;
     color: white;
 }
+
+[data-login-user-area] {
+    border-color: #4765a0;
+}
+
+[data-login-user-area], [data-login-user-area] * {
+    border-radius: 0px;
+}
+
+[data-login-user-area] .panel {
+    box-shadow:none;
+    margin-bottom:3px;
+    min-width: 300px;
+}
+
+[data-login-user-area] .panel-heading {
+    margin-bottom:7px;
+    background-color: #4765a0;
+    color: white;
+}
+
+[data-login-user-area] .panel-body {
+    padding-top: 7px;
+    padding-bottom:7px;
+}
+
+[data-login-user-area] .glyphicon-envelope,
+[data-login-user-area] .glyphicon-lock
+{
+    padding-left: 0px;
+    border: none;
+    background-color: white;
+}
+
+[data-login-user-area] inpuy[type=text].form-control,
+[data-login-user-area] input[type=password].form-control
+{
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
+.data-login-error {
+    background-color: red;
+    border-color: red;
+}
+
+#login-button {
+    margin-top: 3px;
+    background-color: #4765a0;
+    border-color: #4765a0;
+    color: white;
+}
+
+#login-button:hover {
+    background-color: #627eb3;
+}
+
+[data-login-user-area] input[type=checkbox] {
+    margin-top: 12px;
+    margin-left: 27px;
+}
