--- a/Membership_app/Views/Shared/_LoginPartial.cshtml
+++ b/Membership_app/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,10 @@ else
         <li>
             @Html.GlyphLink("Account", "Login", "Log in", "user", "", "loginLink")
             <div class="hidden-xs" data-login-panel-partial></div>
-            @Html.Partial("_LoginPanelPartial", new LoginViewModel { Email="", Password="", RememberMe=false})
+            @Html.Partial("_LoginPanelPartial", new LoginViewModel { Email = "", Password = "", RememberMe = false })
+        </li>
+        <li>
+            @Html.GlyphLink("", "", "Password", "lock", "", "pwdLink", new Dictionary<string, string> { { "data-toggle", "modal" }, { "data-target", "#pwdModal" } })
         </li>
     </ul>
 }
